--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 h1{
   color: blue;
 }
+
+body{
+  text-align: center;
+}
+
+table, tr, td{
+  border: 1px solid black;
+
+}
+
+table{
+  border-collapse: collapse;
+  margin: 0 auto;
+}
+
+tr{
+  height: 50px;
+}
+
+td{
+  width: 50px;
+}
